DTS-34885 Open defects logic