@@ -27,6 +27,7 @@ import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -100,9 +101,10 @@ public class ReleaseDefectCountByRCAServiceImpl extends JiraReleaseKPIService {
 			}
 			Set<String> finalJiraDodKPI142LowerCase = jiraDodKPI142LowerCase;
 			List<JiraIssue> openDefects = totalDefects.stream()
-					.filter(jiraIssue -> fieldMapping.getStoryFirstStatus().contains(jiraIssue.getStatus())
+					.filter(jiraIssue -> StringUtils.isNotEmpty(jiraIssue.getStatus())
+							&& !finalJiraDodKPI142LowerCase.isEmpty()
 							&& !finalJiraDodKPI142LowerCase.contains(jiraIssue.getStatus().toLowerCase()))
-					.toList();
+					.collect(Collectors.toList());
 			IterationKpiValue openDefectsIterationKpiValue = new IterationKpiValue();
 			openDefectsIterationKpiValue.setFilter1(OPEN_DEFECT);
 			openDefectsIterationKpiValue.setValue(getDefectsDataCountList(openDefects, fieldMapping));
